# AlephBot

./: .gitignore  .mergify.yml  README.md  alephbot.py  pyproject.toml  run.py  sonar-project.properties  tokens.env
.github/: labeler.yml
commands/: analyze.py  invite.py  root.py  translate.py  vowelize.py
tests/: test_alephbot.py  test_nakdan_api.py
utils/: bot_utils.py  config.py  constants.py  deepl_api.py  dicta_api.py  discord_helpers.py  exceptions.py  hebrew.py  hebrew_constants.py  hebrew_labels.py  logging_config.py  models.py  nakdan_api.py  nakdan_exceptions.py  nakdan_types.py  nlp.py  translation.py
