[tool.poetry]
name = "alephbot"
version = "0.1.0"
description = "A Discord bot for adding Niqqud to Hebrew text using Nakdan API."
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/yourusername/alephbot"
documentation = "https://example.com/docs"

[tool.poetry.dependencies]
python = ">=3.12"
discord-py = "^2.0"
requests = "^2.26"
pydantic = "^2.6.1"
toml = "^0.10"
uvicorn = "^0.15"
fastapi = "0.109.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
tenacity = "^9.0.0"
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
