[tool.poetry]
name = "alephbot"
version = "0.1.0"
description = "A Discord bot for adding Niqqud to Hebrew text using Nakdan API."
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/yourusername/alephbot"
documentation = "https://example.com/docs"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26"
pydantic = "^2.6.1"
toml = "^0.10"
uvicorn = "^0.32.1"
fastapi = "0.115.5"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
tenacity = "^9.0.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
hebrew = "^0.8.1"
watchdog = "^6.0.0"
environs = "^11.2.1"
websockets = "^14.1"
spacy = "^3.8.2"
deplacy = "^2.1.0"
spacy-conll = "^4.0.1"
cogwatch = "^3.3.1"
ezcord = "^0.7.1"
discord-pretty-help = "^2.0.7"
py-cord = "^2.6.1"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
